creted some common patterns
adding all the projects

--- a/protfolio/Responsive portfolio.html
+++ b/protfolio/Responsive portfolio.html
@@ -23,7 +23,7 @@
 
     <div class="main">
       <div class="profilePic">
-        <img title="Akshay" src="https://cdn4.iconfinder.com/data/icons/linecon/512/photo-256.png" alt="Profile Pic">
+        <img title="Akshay" src="img\profile.png" alt="Profile Pic">
       </div>
       <div class="info">
         <h1 style="color: #FF5032">Hi, I am <b>Akshay</b></h1>
