--- a/Layout shifter/layout.html
+++ b/Layout shifter/layout.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Layout Shifter</title>
+    <title>Layout Shifter Pattern</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -13,13 +13,21 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-2 " style="background-color: #DB044B;
-        "><p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical.</p></div>
+        ">
+                <p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical.</p>
+            </div>
             <div class="col-xs-12 col-sm-7 col-md-9 col-lg-6 " style="background-color: #B6BA01;
-        "><p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical.  </p></div>
+        ">
+                <p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. </p>
+            </div>
             <div class="col-xs-12 col-sm-5 col-md-3 col-lg-4 " style="background-color: #7E7323;
-        "><p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. </p></div>
+        ">
+                <p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. </p>
+            </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="background-color: #1B0C43; color: white;
-        "><p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. </p></div>
+        ">
+                <p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. </p>
+            </div>
         </div>
     </div>
 </body>
